--- a/Paper/References/MyLibraryATE.bib
+++ b/Paper/References/MyLibraryATE.bib
@@ -1903,3 +1903,22 @@ A human skull from 34,000 years ago found in Mongolia elucidates the genetics of
 	year = {2016},
 	annote = {version 2.2-4}
 }
+
+
+@article{marjoram_fast_2006,
+	title = {Fast "coalescent" simulation},
+	volume = {7},
+	issn = {1471-2156},
+	url = {https://doi.org/10.1186/1471-2156-7-16},
+	doi = {10.1186/1471-2156-7-16},
+	abstract = {The amount of genome-wide molecular data is increasing rapidly, as is interest in developing methods appropriate for such data. There is a consequent increasing need for methods that are able to efficiently simulate such data. In this paper we implement the sequentially Markovian coalescent algorithm described by McVean and Cardin and present a further modification to that algorithm which slightly improves the closeness of the approximation to the full coalescent model. The algorithm ignores a class of recombination events known to affect the behavior of the genealogy of the sample, but which do not appear to affect the behavior of generated samples to any substantial degree.},
+	number = {1},
+	urldate = {2021-05-30},
+	journal = {BMC Genetics},
+	author = {Marjoram, Paul and Wall, Jeff D.},
+	month = mar,
+	year = {2006},
+	keywords = {Ancestral Recombination Graph, Coalescent Model, Coalescent Process, Recombination Event, Rejection Algorithm},
+	pages = {16},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/98A5WVUE/Marjoram and Wall - 2006 - Fast coalescent simulation.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/AMG4W34L/1471-2156-7-16.html:text/html}
+}
