--- a/Paper/References/MyLibraryATE.bib
+++ b/Paper/References/MyLibraryATE.bib
@@ -1922,3 +1922,23 @@ A human skull from 34,000 years ago found in Mongolia elucidates the genetics of
 	pages = {16},
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/98A5WVUE/Marjoram and Wall - 2006 - Fast coalescent simulation.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/AMG4W34L/1471-2156-7-16.html:text/html}
 }
+
+
+@article{mcvean_approximating_2005,
+	title = {Approximating the coalescent with recombination},
+	volume = {360},
+	issn = {0962-8436},
+	doi = {10.1098/rstb.2005.1673},
+	abstract = {The coalescent with recombination describes the distribution of genealogical histories and resulting patterns of genetic variation in samples of DNA sequences from natural populations. However, using the model as the basis for inference is currently severely restricted by the computational challenge of estimating the likelihood. We discuss why the coalescent with recombination is so challenging to work with and explore whether simpler models, under which inference is more tractable, may prove useful for genealogy-based inference. We introduce a simplification of the coalescent process in which coalescence between lineages with no overlapping ancestral material is banned. The resulting process has a simple Markovian structure when generating genealogies sequentially along a sequence, yet has very similar properties to the full model, both in terms of describing patterns of genetic variation and as the basis for statistical inference.},
+	language = {eng},
+	number = {1459},
+	journal = {Philosophical Transactions of the Royal Society of London. Series B, Biological Sciences},
+	author = {McVean, Gilean A. T. and Cardin, Niall J.},
+	month = jul,
+	year = {2005},
+	pmid = {16048782},
+	pmcid = {PMC1569517},
+	keywords = {Chromosomes, Computer Simulation, Evolution, Molecular, Genetic Variation, Likelihood Functions, Linkage Disequilibrium, Markov Chains, Models, Genetic, Recombination, Genetic},
+	pages = {1387--1393},
+	file = {Full Text:/home/leonardo_iasi/Zotero/storage/SXJ93EC7/McVean and Cardin - 2005 - Approximating the coalescent with recombination.pdf:application/pdf}
+}
